ch05/my-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: this-is-my-app
  type: NodePort
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 8080
