ch05/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  # ingressClassName: nginx
  rules:
  - host: "hello-world.info"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: my-service
              port: 
                number: 3000
